--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background-image: url("https://bitcoininvites.com/img/btc-bg.png");
+    background-image: url("btc-bg.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: initial;
